Dedupe name matching into Ownership so prompt and UI ownership cannot drift
Co-authored-by: Cursor <cursoragent@cursor.com>